Center align login card issue #348

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3564,6 +3564,7 @@ p {
 
 
 .login-body {
+  align-items:center;
   margin: 0;
   padding: 0;
   width: 100%;
